# jirareport

./: .env.example  .gitignore  README.md  pyproject.toml
.ai/: coding-style.md
.github/workflows/: ci.yml  daily-report.yml
config/: spaces.yaml
docs/: BUSINESS_OVERVIEW.md  DEVELOP.md  IMPLEMENTATION_PLAN.md  PRD.md  REPORTING_ARCHITECTURE_PLAN.md  SHEETS_INTEGRATION.md
src/jirareport/: __init__.py  main.py
src/jirareport/application/: __init__.py  parquet_serializers.py  serializers.py  services.py  spreadsheets.py  utils.py
src/jirareport/domain/: __init__.py  models.py  ports.py  time_range.py
src/jirareport/infrastructure/: __init__.py  config.py  jira_client.py  logging_config.py  storage.py
src/jirareport/infrastructure/google/: __init__.py  bigquery_client.py  sheets_client.py
src/jirareport/interfaces/: __init__.py
src/jirareport/interfaces/cli/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/fakes/: __init__.py  fake_bigquery.py  fake_sheets.py
tests/integration/: test_fake_bigquery_warehouse.py  test_fake_google_sheets_publisher.py  test_jira_client.py  test_reporting_pipeline.py
tests/unit/: test_bigquery_client.py  test_cli.py  test_config.py  test_domain_models.py  test_google_sheets.py  test_jira_helpers.py  test_logging_and_entrypoint.py  test_serializers.py  test_services.py  test_storage.py  test_storage_helpers.py  test_time_range.py
